--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ovision-client",
   "version": "0.1.0",
+  "homepage": "https://northshine.github.io/ovision-client/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
